--- a/starter-code/templates/wines-show.html
+++ b/starter-code/templates/wines-show.html
@@ -1,1 +1,10 @@
 Welcome to Wine Show (templates/wines-show.html)
+
+<!-- <div ng-repeat="wine in wines" > -->
+<h3><a href="/wines/{{wine.id}}">{{ wine.name + " - " + "$" + wine.price}}</a></h3>
+<h4> {{ wine.year }} </h4>
+<h4> {{ wine.country + " | " + wine.region}} </h4>
+<h5> {{ wine.grapes }} </h5>
+<img src="{{wine.picture}}">
+<p> {{ wine.description }} </p>
+</div>
